[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level/Level0.gd" type="Script" id=2]
[ext_resource path="res://Towers/BasicTower.tscn" type="PackedScene" id=3]
[ext_resource path="res://MapAlpha.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -85.1452, -19.3512, 0, 0, 0, 0, 313.489, -19.3512, 0, 0, 0, 0, 503.13, 119.977, 0, 0, 0, 0, 212.863, 119.977, 0, 0, 0, 0, 212.863, 7.74047, 0, 0, 0, 0, 112.237, 7.74047, 0, 0, 0, 0, 112.237, 119.977, 0, 0, 0, 0, -85.1452, 119.977, 0, 0, 0, 0, -85.1452, 65.794 )
}

[node name="Game" type="Node2D"]
position = Vector2( 0.257568, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -136.0 ]
}

[node name="Map" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.516068, 94.5127 )
scale = Vector2( 1, 1 )

[node name="Path2D" type="Path2D" parent="." groups=[
"Enemies",
]]
position = Vector2( 223.742, 216 )
scale = Vector2( 2.06706, 2.06706 )
curve = SubResource( 1 )

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="TextureButton" type="TextureButton" parent="HUD"]
margin_left = 3.15704
margin_top = 97.8681
margin_right = 987.157
margin_bottom = 634.868
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower" parent="." instance=ExtResource( 3 )]
position = Vector2( 269.188, 266.59 )
scale = Vector2( 0.75, 0.75 )

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="start" from="HUD" to="." method="_on_HUD_start"]
[connection signal="pressed" from="HUD/TextureButton" to="." method="_on_TextureButton_pressed"]
